# product-administration-service

./: .gitignore  CONTEXT.TXT  Dockerfile  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml  requirements.txt  start-sonarcube.sh  stop-sonarcube.sh
.github/workflows/: tests.yml
app/: .coverage  extensions.py  report.html
app/instance/: app.db
app/models/: category.py  product.py
app/routes/: auth.py  products.py
app/static/: index.html
app/static/js/: rest_api.js
app_w_uniq/: .coverage  app.py
app_w_uniq/common/: logging_config.py
app_w_uniq/instance/: app.db
app_w_uniq/models/: product.py  user.py
app_w_uniq/routes/: __init__.py  categories.py  main.py  products.py
features/: README.md  environment.py  products.feature
features/steps/: initial_data_loading_using_api_steps.py  web_interface_steps.py
tests/: conftest.py  conftest.py_prev  factories.py  integration_test_example.py  integration_test_example_for_repl.py  test_models.py  test_routes.py
